# SQLModelGenerator

./: config.toml  pyproject.toml
src/sqlmodelgenerator/: config.py  db.py  generator.py
