[tool.poetry]
name = "pype"
version = "0.1.0"
description = ""
authors = ["Bruno dos Santos <brunods1001@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
sqlmodel = "^0.0.8"
typer = "^0.6.1"
fastapi = "^0.85.1"
sanitize-filename = "^1.2.0"
pandera = "^0.13.3"
pandas = "^1.5.1"
psycopg2 = "^2.9.5"
dws-client = {version = "^0.1.0.20221027144639", source = "lilly"}
jupyterlab = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
